--- a/banthan.html
+++ b/banthan.html
@@ -14,7 +14,7 @@ b
 <div class="profile-container">
     <!-- Phần đầu của hồ sơ -->
     <div class="profile-header">
-        <img src="\anhtoi.jpg" alt="Ảnh cá nhân">
+        <img src="anhtoi.jpg" alt="Ảnh cá nhân">
         <div class="profile-info">
             <h1>Trần Thái Dương</h1>
             <p>Ngày sinh: 02/12/2005</p>
